Add API for getting product image by id
